# ADS-Project

./: CMakeLists.txt  README.md  main.cpp  queue.h
MalkADS/: .gitignore  CMakeLists.txt  IntervalTreeComplete.cpp  IntervalTreeComplete.h  README_GUI.md  bindings.cpp  book.cpp  book.h  books.cpp  books.h  books.txt  build_gui.bat  build_log.txt  build_log_verbose.txt  debug_book.txt  laptops.cpp  laptops.h  library_system.cp313-win_amd64.pyd  library_system.cp313-win_amd64.pyd.old  main  main.cpp  reproduce_book_add.py  requirements.txt  rooms.cpp  rooms.h  run.bat  run_gui.bat  setup.py  test_rooms.py  user.cpp  users.cpp  users.h
MalkADS/data/: book_bookings.txt  books.txt  laptop_bookings.txt  laptops.txt  room_bookings.txt  rooms.txt  users.txt
MalkADS/gui/: admin_dashboard.py  admin_forms.py  book_search.py  booking_forms.py  bookings_view.py  login_screen.py  main.py  styles.py  time_slider.py  time_slot_grid.py  user_dashboard.py  utils.py  widgets.py
MalkADS/include/helpers/: ResourceIO.h  UIHelpers.h
MalkADS/include/managers/: BooksManager.h  LaptopsManager.h  LibrarySystem.h  RoomsManager.h  UsersManager.h
MalkADS/include/models/: book.h  user.h
MalkADS/include/structures/: IntervalTreeComplete.h  hash_map.h  linked_list.h  priority_queue.h  queue.h
MalkADS/src/managers/: BooksManager.cpp  LaptopsManager.cpp  LibrarySystem.cpp  RoomsManager.cpp  UsersManager.cpp
MalkADS/src/models/: book.cpp  user.cpp
MalkADS/src/structures/: IntervalTreeComplete.cpp  queue.cpp
MalkADS/tests/: BooksManagerTester.cpp  CMakeLists.txt  LaptopsManagerTester.cpp  RoomsManagerTester.cpp  UserManagerTester.cpp
data/: users.csv
include/: hash_map.h  queue.cpp  queue.h
include/managers/: BooksManager.h  LibrarySystem.h  UserManager.h
include/models/: Book.h  User.h
src/: IntervalTreeComplete.cpp  hash_map.cpp  main.cpp  priority_queue.cpp  queue.cpp
src/managers/: BooksManager.cpp  LibrarySystem.cpp  UserManager.cpp
src/models/: User.cpp
tests/: hash_test.cpp
